full refactoring and fixes