@@ -1,9 +1,8 @@
 package fi.ishtech.springboot.auth.userdetails;
 
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Objects;
 
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
@@ -28,9 +27,13 @@ public class UserDetailsImpl implements UserDetails {
 
 	private static final long serialVersionUID = 8045685643481477217L;
 
+	private static final String ROLE_PREFIX = "ROLE_";
+
 	private Long id;
 
 	private String username;
+
+	private String email;
 
 	@ToString.Exclude
 	@JsonIgnore
@@ -38,36 +41,59 @@ public class UserDetailsImpl implements UserDetails {
 
 	private Collection<? extends GrantedAuthority> authorities;
 
-	private boolean isAccountNonExpired;
-
-	private boolean isAccountNonLocked;
-
-	private boolean isCredentialsNonExpired;
-
 	private boolean isEnabled;
 
-	public static UserDetails of(Long id, String username, String password, boolean isEnabled) {
+	private String fullName;
+
+	private String lang;
+
+	public static UserDetails of(Long id, String username, String email, String password, boolean isEnabled,
+			List<String> userRoleNames, String fullName, String lang) {
 		UserDetailsImpl userDetails = new UserDetailsImpl();
 
 		userDetails.setId(id);
 
 		userDetails.setUsername(username);
+		userDetails.setEmail(email);
 		userDetails.setPassword(password);
 
 		userDetails.setEnabled(isEnabled);
 
-		userDetails.setAccountNonExpired(isEnabled);
-		userDetails.setAccountNonLocked(isEnabled);
-		userDetails.setCredentialsNonExpired(isEnabled);
+		userDetails.setAuthorities(convertToAuthorities(userRoleNames));
 
-		userDetails.setAuthorities(Arrays.asList(new SimpleGrantedAuthority("ROLE_USER")));
+		userDetails.setFullName(fullName);
+		userDetails.setLang(lang);
 
 		return userDetails;
 	}
 
 	@JsonIgnore
 	public List<String> getScopes() {
-		return getAuthorities().stream().map(item -> item.getAuthority()).collect(Collectors.toList());
+		return getAuthorities().stream().map(item -> item.getAuthority()).toList();
+	}
+
+	@JsonIgnore
+	public List<String> getRoleNames() {
+		// @formatter:off
+		return getAuthorities().stream()
+				.map(GrantedAuthority::getAuthority)
+				.map(role -> role.startsWith(ROLE_PREFIX) ? role.substring(5) : role)
+				.toList();
+		// @formatter:on
+	}
+
+	private static List<SimpleGrantedAuthority> convertToAuthorities(List<String> roleNames) {
+		// @formatter:off
+		return roleNames.stream()
+				.filter(Objects::nonNull)
+				.map(String::trim)
+				.filter(name -> !name.isEmpty())
+				.map(name -> name.toUpperCase().startsWith(ROLE_PREFIX)
+						? name.toUpperCase()
+						: ROLE_PREFIX + name.toUpperCase())
+				.map(SimpleGrantedAuthority::new)
+				.toList();
+		// @formatter:on
 	}
 
 }
